corrected types spilling out of the card

--- a/src/Components/Card/PokeCard.module.scss
+++ b/src/Components/Card/PokeCard.module.scss
@@ -138,6 +138,8 @@
               box-shadow: 6px 8px 9px 1px rgba(0, 0, 0, 0.3);
               transition: all 0.75s ease-out;
               text-transform: uppercase;
+              font-size: 10px;
+              font-weight: bold;
             }
             
         }
